# questify-api

./: .dockerignore  .gitignore  README.md  base.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
app/: __init__.py  asgi.py  urls.py  wsgi.py
app/auth/: providers.py
app/config/: celery.py  settings.py
app/core/: enums.py
app/habits/: admin.py  filters.py  models.py  serializers.py  views.py
app/habits/migrations/: 0001_initial.py  0002_userhabit.py  0003_remove_userhabit_habit_logs_habitlog_and_more.py  0004_alter_habit_difficulty_level_alter_userhabit_status.py  0005_remove_userhabit_notifications_enabled.py  0006_remove_habit_skills_and_more.py  0007_remove_userhabit_next_milestone_and_more.py
app/milestones/: admin.py  models.py
app/milestones/migrations/: 0001_initial.py
app/skills/: admin.py  models.py
app/skills/migrations/: 0001_initial.py  0002_skill_milestones.py
app/users/: admin.py  filters.py  models.py  serializers.py  views.py
app/users/migrations/: 0001_initial.py  0002_remove_user_phone_number_user_experience_user_level.py  0002_remove_user_phone_number_user_experience_user_level_and_more.py
docker/web/: Dockerfile  entrypoint.sh
docker/worker/: Dockerfile  supervisord.conf
endpoints/: Me.bru  User Signup.bru
gunicorn/: gunicorn.conf.py
nginx/: default.conf  nginx.conf
prometheus/: docker-compose.yml  prometheus.yml
